integrate kafka into storage
- remove post endpoints from storage service
- read and save messages from kafka
